--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "roblox-long-polling",
-  "version": "1.0.2",
+  "name": "sa-long-polling",
+  "version": "1.1.4",
   "main": "index.js",
   "license": "MIT",
-  "author": "Reselim <reselimiscool@gmail.com>",
+  "author": "UltraaaDev",
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "uuid": "^3.2.1"
   },
-  "repository": "https://github.com/Reselim/roblox-long-polling.git"
+  "repository": "https://github.com/robloxscp/scpf-long-polling.git"
 }
